--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -354,7 +354,7 @@
         typing();
 
         try {
-            const res = await fetch(`${API_URL}?key=${API_KEY}`, {
+            const res = await fetch(`${API_URL}?key=${AIzaSyCMjm5Kv4eRqL-8mkH7arYIVqVGwU1LZ_o}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
